--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,5 @@
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
 /phpunit.xml.dist   export-ignore
-/assets                export-ignore
+/assets             export-ignore
+/phptools.png
